crates/ty_server/tests/e2e/snapshots/e2e__commands__debug_command.snap
---
source: crates/ty_server/tests/e2e/commands.rs
expression: response
---
Client capabilities: ResolvedClientCapabilities(
    WORKSPACE_CONFIGURATION,
)
Position encoding: UTF16
Global settings: GlobalSettings {
    diagnostic_mode: OpenFilesOnly,
    experimental: ExperimentalSettings,
    show_syntax_errors: true,
}
Open text documents: 0

Workspace XXX
Settings: WorkspaceSettings {
    disable_language_services: false,
    inlay_hints: InlayHintSettings {
        variable_types: true,
        call_argument_names: true,
    },
    completions: CompletionSettings {
        auto_import: true,
        complete_function_parentheses: false,
    },
    configuration_file: None,
    override_options: None,
    fallback_options: None,
}

Project at XXX
Program:
  python-version: 3.10
  python-platform: linux
  search-paths: [
    <temp_dir>/src,
    <temp_dir>/,
    vendored://stdlib,
  ]
Settings: Settings {
    rules: <RULES>,
    terminal: TerminalSettings {
        output_format: Full,
        error_on_warning: true,
    },
    src: SrcSettings {
        respect_ignore_files: true,
        exclude_scripts: false,
        files: IncludeExcludeFilter {
            include: IncludeFilter(
                [
                    "**",
                ],
                ..
            ),
            exclude: ExcludeFilter {
                ignore: Gitignore(
                    [
                        IgnoreGlob {
                            original: "<temp_dir>/**/.bzr/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.direnv/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.eggs/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.git/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.git-rewrite/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.hg/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.mypy_cache/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.nox/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.pants.d/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.pytype/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.ruff_cache/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.svn/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.tox/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/.venv/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/__pypackages__/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/_build/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/buck-out/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/dist/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/node_modules/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                        IgnoreGlob {
                            original: "<temp_dir>/**/venv/",
                            is_allow: false,
                            is_only_dir: true,
                        },
                    ],
                    ..
                ),
            },
        },
    },
    analysis: AnalysisSettings {
        strict_generic_narrowing: false,
        strict_equality_semantics: false,
        respect_type_ignore_comments: true,
        allowed_unresolved_imports: ModuleGlobSet {
            regex_set: RegexSet([]),
            globs: [],
        },
        replace_imports_with_any: ModuleGlobSet {
            regex_set: RegexSet([]),
            globs: [],
        },
    },
    overrides: [],
}

Memory report:
=======SALSA STRUCTS=======
`FileRoot`                                         metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`File`                                             metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`ModuleResolveModeIngredient`                      metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`Program`                                          metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`Project`                                          metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`ReachingDefinitionsRecording`                     metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`ResolverEnvironment`                              metadata=[X.XXMB]   fields=[X.XXMB]   count=1
=======SALSA QUERIES=======
`Project::program_ -> ty_python_core::program::Program<'_>`
    metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`dynamic_resolution_paths -> alloc::boxed::Box<[ty_module_resolver::path::SearchPath]>`
    metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`script_tag -> core::option::Option<alloc::boxed::Box<ruff_python_ast::script::ScriptTag>>`
    metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`site_packages_editables -> alloc::boxed::Box<[ty_module_resolver::resolve::SitePackagesEditables]>`
    metadata=[X.XXMB]   fields=[X.XXMB]   count=1
`source_text -> ruff_db::source::SourceText`
    metadata=[X.XXMB]   fields=[X.XXMB]   count=1
=======SALSA SUMMARY=======
TOTAL MEMORY USAGE: [X.XXMB]
    struct metadata = [X.XXMB]
    struct fields = [X.XXMB]
    memo metadata = [X.XXMB]
    memo fields = [X.XXMB]
